# etch-a-sketch-tk

./: .editorconfig  .gitignore  LICENSE  Makefile  README.md  etch.py  pyproject.toml
src/: __main__.py
src/support/: circle.py
src/widget/: dragable.py  etch.py  knob.py
