[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etch-a-sketch-tk"
version = "0.0.1"
description = "Etch A Sketch in Tkinter"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}

[project.scripts]
etch = "src.__main__:main"

[project.optional-dependencies]
dev = [
    "ruff==0.11.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["tests*"]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.pyc",
]

[tool.ruff.lint]
extend-select = ["E501"]  # Example: enforce line-too-long rule
